--- a/css/common.css
+++ b/css/common.css
@@ -182,7 +182,7 @@ ul {
   letter-spacing: 0.04em;
   margin-bottom: 24px;
 }
-.widget-btn {
+.change-color {
   display: flex;
   padding: 8px 16px;
   justify-content: center;
@@ -199,6 +199,15 @@ ul {
 }
 
 /* task-6 */
+body {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  border-radius: 8px;
+  background: #fff;
+}
 .button {
   display: flex;
   padding: 32px;
@@ -243,4 +252,14 @@ ul {
 }
 .btn-destroy:hover {
   background: #ff7070;
+}
+#boxes {
+  display: flex;
+  min-width: 486px;
+  padding: 32px;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 8px;
+  background: #f6f6fe;
 }
